<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yeahdev.yeahsleeptimerfree.fragments.GoToBedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/textGTB"
            android:gravity="center_horizontal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvGoToBedChoosenTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:text="@string/startTime"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnGoGTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/textColorPrimary"
            android:text="@string/btnSelectTime"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGoToBed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>
